# xdislock

./: Makefile.in  config.h.in  configure  configure.ac
debian/: changelog  control  copyright
man/: Makefile.am  Makefile.in
resources/: bitmap
src/: Makefile.am  Makefile.in  pixmap.h  xdislock.c
